--- a/Afforai/src/components/UseCaseComponents/MovingSlider/style.module.css
+++ b/Afforai/src/components/UseCaseComponents/MovingSlider/style.module.css
@@ -1,14 +1,14 @@
-.sliderContainer:nth-child(1) {
+.sliderContainer>* {
     /* display: inline-block; */
-    animation: slideAnimation 20s linear infinite;
+    animation: slideAnimation 5s linear infinite;
     /* overflow: hidden; */
 
 
   }
 
-  .sliderContainer:nth-child(2){
-    animation: slideAnimation2 20s linear infinite;
-  }
+  /* .sliderContainer:nth-child(2){
+    animation: slideAnimation2 5s linear infinite;
+  } */
 
   .sliderContainer{
     
@@ -26,18 +26,18 @@
 
   @keyframes slideAnimation {
     0% {
-      transform: translateX(0);
+      transform: translateX(50%);
     }
     100% {
-      transform: translateX(-100%); /* Adjust the distance to slide */
+      transform: translateX(-50%); /* Adjust the distance to slide */
     }
   }
 
   @keyframes slideAnimation2 {
     0% {
-      transform: translateX(0);
+      transform: translateX(50%);
     }
     100% {
-      transform: translateX(-100%); /* Adjust the distance to slide */
+      transform: translateX(-50%); /* Adjust the distance to slide */
     }
   }
