--- a/Afforai/src/components/layout.module.css
+++ b/Afforai/src/components/layout.module.css
@@ -2,7 +2,7 @@
     background-color: rgb(250, 250, 250);
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     display: flex;
     flex-direction: column;
     /* align-items: center; */
