--- a/Afforai/src/components/UseCaseComponents/FAQSection/style.module.css
+++ b/Afforai/src/components/UseCaseComponents/FAQSection/style.module.css
@@ -17,4 +17,28 @@
 .textContainer{
     padding: 0 0.75rem;
     max-width: 540px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.heading{
+    color: rgb(34, 34, 34);
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 130%;
+    margin-bottom: 1rem;
+}
+
+.description{
+    color: rgb(82, 82, 82);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 130%;
+}
+
+.questionsList{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
