fixed styling on desktop for section. mainly margins

--- a/Afforai/src/components/UseCaseComponents/FAQSection/style.module.css
+++ b/Afforai/src/components/UseCaseComponents/FAQSection/style.module.css
@@ -12,6 +12,8 @@
 .rowPadding{
     padding: 0 0.75rem;
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .textContainer{
