--- a/Afforai/src/components/UseCaseComponents/LovedBySection/style.module.css
+++ b/Afforai/src/components/UseCaseComponents/LovedBySection/style.module.css
@@ -17,3 +17,9 @@
 .lovedByImage{
     height: 48px;
 }
+
+@media(min-width:786px){
+    .lovedBySectionContainer{
+        margin: 100px auto 128px
+    }
+}
