changed navbar to fixed

--- a/Afforai/src/components/UseCaseComponents/Navbar/style.module.css
+++ b/Afforai/src/components/UseCaseComponents/Navbar/style.module.css
@@ -12,8 +12,9 @@
 }
 
 .navbarContainer{
-    /* position: fixed; */
+    position: fixed;
     z-index: 10;
+    width: 100%;
 }
 
 .navbarLinksContainer{
